--- a/Supply chain analysis.ipynb
+++ b/Supply chain analysis.ipynb
@@ -585,14 +585,13 @@
     "# Group the data by 'Product type' and sum the 'Number of products sold'\n",
     "sales_data = df.groupby('Product type')['Number of products sold'].sum().reset_index()\n",
     "\n",
-    "# Create a pie chart using Matplotlib\n",
+    "\n",
     "plt.figure(figsize=(6, 6))\n",
     "colors = sns.color_palette('pastel', len(sales_data['Product type']))\n",
     "plt.pie(sales_data['Number of products sold'], labels=sales_data['Product type'], autopct='%1.1f%%', startangle=140,\n",
     "        colors=colors, wedgeprops={'edgecolor': 'gray'})\n",
-    "plt.title('Sales by Product Type (Matplotlib)')\n",
+    "plt.title('Sales by Product Type')\n",
     "\n",
-    "# Show the Matplotlib pie chart\n",
     "plt.show()"
    ]
   },
@@ -616,14 +615,14 @@
    "source": [
     "total_revenue = df.groupby('Shipping carriers')['Revenue generated'].sum().reset_index()\n",
     "\n",
-    "# Create a bar chart using Matplotlib\n",
+    "\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.barplot(x='Shipping carriers', y='Revenue generated', data=total_revenue, palette='pastel')\n",
-    "plt.title('Total Revenue by Shipping Carrier (Matplotlib)')\n",
+    "plt.title('Total Revenue by Shipping Carrier')\n",
     "plt.xlabel('Shipping Carrier')\n",
     "plt.ylabel('Revenue Generated')\n",
     "\n",
-    "# Show the Matplotlib bar chart\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -685,7 +684,6 @@
     "plt.ylabel('Revenue Generated')\n",
     "plt.grid(True)\n",
     "\n",
-    "# Show the Matplotlib line chart\n",
     "plt.show()"
    ]
   },
@@ -714,7 +712,7 @@
     "plt.ylabel('Stock Levels')\n",
     "plt.grid(True)\n",
     "\n",
-    "# Show the Matplotlib line chart\n",
+    "\n",
     "plt.show()\n"
    ]
   },
@@ -736,7 +734,7 @@
     }
    ],
    "source": [
-    "# Create a bar chart using Matplotlib\n",
+    "\n",
     "plt.figure(figsize=(50, 30))\n",
     "plt.bar(df['SKU'], df['Order quantities'], color='b')\n",
     "plt.title('Order Quantity by SKU ')\n",
@@ -745,7 +743,7 @@
     "plt.xticks(rotation=45)\n",
     "plt.grid(axis='y')\n",
     "\n",
-    "# Show the Matplotlib bar chart\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -840,12 +838,12 @@
     "# Calculate the total costs for each transportation mode\n",
     "total_costs = df.groupby('Transportation modes')['Costs'].sum().reset_index()\n",
     "\n",
-    "# Create a pie chart using Matplotlib\n",
+    "\n",
     "plt.figure(figsize=(6, 6))\n",
     "plt.pie(total_costs['Costs'], labels=total_costs['Transportation modes'], autopct='%1.1f%%', startangle=140)\n",
-    "plt.title('Cost Distribution by Transportation Mode (Matplotlib)')\n",
+    "plt.title('Cost Distribution by Transportation Mode')\n",
     "\n",
-    "# Show the Matplotlib pie chart\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -871,16 +869,16 @@
     "# Calculate the average defect rates for each product type and reset the index\n",
     "defect_rates_by_product = df.groupby('Product type')['Defect rates'].mean().reset_index()\n",
     "\n",
-    "# Create a bar chart using Matplotlib\n",
+    "\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.barplot(data=defect_rates_by_product, x='Product type', y='Defect rates', color='c')\n",
-    "plt.title('Average Defect Rates by Product Type (Matplotlib)')\n",
+    "plt.title('Average Defect Rates by Product Type ')\n",
     "plt.xlabel('Product Type')\n",
     "plt.ylabel('Average Defect Rates')\n",
     "plt.xticks(rotation=45)\n",
     "plt.grid(axis='y')\n",
     "\n",
-    "# Show the Matplotlib bar chart\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -905,12 +903,12 @@
     "# Create a pivot table to calculate the mean defect rates by transportation mode\n",
     "pivot_table = pd.pivot_table(df, values='Defect rates', index=['Transportation modes'], aggfunc='mean')\n",
     "\n",
-    "# Create a pie chart using Matplotlib\n",
+    "\n",
     "plt.figure(figsize=(6, 6))\n",
     "plt.pie(pivot_table['Defect rates'], labels=pivot_table.index, autopct='%1.1f%%', startangle=140)\n",
-    "plt.title('Defect Rates by Transportation Mode (Matplotlib)')\n",
+    "plt.title('Defect Rates by Transportation Mode')\n",
     "\n",
-    "# Show the Matplotlib pie chart\n",
+    "\n",
     "plt.show()"
    ]
   },
